--- a/src/frontend/src/app/components/training/training-home/training-home.component.html
+++ b/src/frontend/src/app/components/training/training-home/training-home.component.html
@@ -19,7 +19,7 @@
             </ng-container>
                    
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="rowClicked(row)"></tr>
           </table>
                      
     </div>
