Live log implemented, found error in minio results upload

--- a/src/frontend/src/app/components/training/training-detail/training-detail.component.html
+++ b/src/frontend/src/app/components/training/training-detail/training-detail.component.html
@@ -14,10 +14,18 @@
             </div>
             <div class="card-status-data">
                 <div *ngIf="data.status == 'COMPLETED'" class="card-status-data-completed">
+                    <div #scrollBottom class="log-container">
+                        <div class="log-container-text">{{log}}</div>
+                    </div>
                     <button class="ds-button-primary" (click)="getTrainingRequestResults()">Download results</button>
                 </div>
                 <div *ngIf="data.status == 'SCHEDULED'" class="card-status-data-scheduled">
                     <h1>Your training request is in the queue</h1>
+                </div>
+                <div *ngIf="data.status == 'EXECUTING'" class="card-status-data-executing">
+                    <div #scrollBottom class="log-container">
+                        <div class="log-container-text">{{log}}</div>
+                    </div>
                 </div>
             </div>
         </div>                
