--- a/src/frontend/src/styles.scss
+++ b/src/frontend/src/styles.scss
@@ -12,7 +12,7 @@ body {
  }
  
  //@import url('https://fonts.googleapis.com/css2?family=Days+One&display=swap');
- @import url('https://fonts.googleapis.com/css2?family=Days+One&family=Montserrat:wght@100;300;600;800&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Days+One&family=Inconsolata:wght@500&family=Montserrat:wght@100;300;600;800&display=swap');
 
 
 .ds-button-primary{
