--- a/src/frontend/src/app/components/training/training-detail/training-detail.component.html
+++ b/src/frontend/src/app/components/training/training-detail/training-detail.component.html
@@ -21,11 +21,13 @@
                 </div>
                 <div *ngIf="data.status == 'SCHEDULED'" class="card-status-data-scheduled">
                     <h1>Your training request is in the queue</h1>
+                    <button class="ds-button-primary" (click)="cancelTrainingRequest()">Cancel training request</button>
                 </div>
                 <div *ngIf="data.status == 'EXECUTING'" class="card-status-data-executing">
                     <div #scrollBottom class="log-container">
                         <div class="log-container-text">{{log}}</div>
                     </div>
+                    <button class="ds-button-primary" (click)="cancelTrainingRequest()">Cancel training request</button>
                 </div>
             </div>
         </div>                
