Working on frontend quadrants. Error in http request

--- a/src/frontend/src/app/components/training/training-new/training-new.component.scss
+++ b/src/frontend/src/app/components/training/training-new/training-new.component.scss
@@ -49,3 +49,12 @@
 .input-card-image-field{
     width: 90% !important;
 }
+
+.timetable-container{
+    height: 400px;
+    overflow: auto;
+}
+
+.table-column-center{
+    justify-content: center !important; 
+}
