--- a/src/frontend/src/styles.scss
+++ b/src/frontend/src/styles.scss
@@ -3,7 +3,12 @@
 @import "custom-theme.scss";
 @import '~highlight.js/styles/vs.css';
 
-html, body { height: 100%; width: 100%; }
+html, body { 
+    height: 100%; 
+    width: 100%; 
+    max-width: 100%;
+    overflow-x: hidden;
+}
 body { 
     margin: 0; 
     //font-family: Roboto, "Helvetica Neue", sans-serif;
