--- a/src/frontend/src/app/components/training/training-new/training-new.component.html
+++ b/src/frontend/src/app/components/training/training-new/training-new.component.html
@@ -9,23 +9,40 @@
             </mat-form-field>
         </form>
     </div>
-    <div class="input-card view-gone" #inputComputingTime>
+    <div class="input-card" #inputComputingTime>
         <h2 class="input-card-title">Computing time</h2>
-        <form [formGroup]="computingTimeForm">
-            <mat-form-field class="input-card-computing-field" appearence="fill" floatLabel="always">
-                <mat-label>Hours</mat-label>
-                <mat-select formControlName="hours">
-                    <mat-option *ngFor="let h of hours" value="{{h}}">{{h}}</mat-option>
-                </mat-select>
-            </mat-form-field>
-            <span> : </span>
-            <mat-form-field class="input-card-computing-field" appearence="fill" floatLabel="always">
-                <mat-label>Minutes</mat-label>
-                <mat-select formControlName="minutes">
-                    <mat-option *ngFor="let m of minutes" value="{{m}}">{{m}}</mat-option>
-                </mat-select>
-            </mat-form-field>
-        </form>
+        <div class="timetable-container">
+            <mat-table [dataSource]="timetableData">
+                <ng-container matColumnDef="time" [sticky]="true">
+                    <mat-header-cell *matHeaderCellDef> Time </mat-header-cell>
+                    <mat-cell *matCellDef="let element"> {{element.time}} </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="d0" [sticky]="true">
+                    <mat-header-cell *matHeaderCellDef> {{daysColumHeader[0]}} </mat-header-cell>
+                    <mat-cell *matCellDef="let element"> {{element.d0.quadrant}} </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="d1" [sticky]="true">
+                    <mat-header-cell *matHeaderCellDef> {{daysColumHeader[1]}} </mat-header-cell>
+                    <mat-cell *matCellDef="let element"> {{element.d1.quadrant}} </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="d2" [sticky]="true">
+                    <mat-header-cell *matHeaderCellDef> {{daysColumHeader[2]}} </mat-header-cell>
+                    <mat-cell *matCellDef="let element"> {{element.d2.quadrant}} </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="d3" [sticky]="true">
+                    <mat-header-cell *matHeaderCellDef> {{daysColumHeader[3]}} </mat-header-cell>
+                    <mat-cell *matCellDef="let element"> {{element.d3.quadrant}} </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="d4" [sticky]="true">
+                    <mat-header-cell *matHeaderCellDef> {{daysColumHeader[4]}} </mat-header-cell>
+                    <mat-cell *matCellDef="let element"> {{element.d4.quadrant}} </mat-cell>
+                </ng-container>
+    
+                <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
+                <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+            </mat-table>
+        </div>
+        
     </div>
     <button class="continue-button" color="primary" mat-fab (click)="continueClicked()" #continueButton >
         <img src="/assets/imgs/iconArrowDown.png">
