Working on frontend workers

--- a/src/frontend/src/app/components/training/training-new/training-new.component.html
+++ b/src/frontend/src/app/components/training/training-new/training-new.component.html
@@ -9,6 +9,10 @@
             </mat-form-field>
         </form>
     </div>
+    <div class="input-card mat-elevation-z6" #inputWorker>
+        <h2 class="input-card-title">Worker</h2>
+
+    </div>
     <div class="input-card mat-elevation-z6" #inputComputingTime>
         <h2 class="input-card-title">Computing time</h2>
         <div class="timetable-container">
