--- a/src/frontend/src/app/components/training/training-new/training-new.component.scss
+++ b/src/frontend/src/app/components/training/training-new/training-new.component.scss
@@ -7,6 +7,7 @@
     flex-direction: column;
     align-items: center;
     background-color: $color-background-general;
+    padding-bottom: 50px;
 }
 
 .input-card{
