--- a/src/frontend/src/app/components/training/training-new/training-new.component.html
+++ b/src/frontend/src/app/components/training/training-new/training-new.component.html
@@ -16,10 +16,18 @@
                 <img src="/assets/imgs/chevronLeft.png">
             </div>
             <div class="worker-content">
-                <p class="worker-content-name">{{workers[selectedWorker].name}}</p>
+                <p class="worker-content-name">Name: {{workers[selectedWorker].name}}</p>
                 <div class="worker-content-prop-container">
-                    <p class="worker-content-prop-name">Prop 1</p>
-                    <p class="worker-content-prop">This is the prop 1</p>
+                    <p class="worker-content-prop-name">NVIDIA Card</p>
+                    <p class="worker-content-prop">{{workers[selectedWorker].gpu_name}}</p>
+                </div>
+                <div class="worker-content-prop-container">
+                    <p class="worker-content-prop-name">Driver version</p>
+                    <p class="worker-content-prop">{{workers[selectedWorker].driver_version}}</p>
+                </div>
+                <div class="worker-content-prop-container">
+                    <p class="worker-content-prop-name">Compute capability</p>
+                    <p class="worker-content-prop">{{workers[selectedWorker].compute_cap}}</p>
                 </div>
             </div>
             <div class="worker-nav-button" (click)="workerNavNext()">
@@ -37,23 +45,23 @@
                 </ng-container>
                 <ng-container matColumnDef="d0" [sticky]="true">
                     <mat-header-cell *matHeaderCellDef> {{daysColumHeader[0]}} </mat-header-cell>
-                    <mat-cell *matCellDef="let element" class="timetable-status-cell" [ngClass]="getStatusClass(element.d0.status)" (click)="quadrantClicked(element.d0)"> {{element.d0.status}} {{element.d0.quadrant}}</mat-cell>
+                    <mat-cell *matCellDef="let element" class="timetable-status-cell" [ngClass]="getStatusClass(element.d0.status)" (click)="quadrantClicked(element.d0)"></mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="d1" [sticky]="true">
                     <mat-header-cell *matHeaderCellDef> {{daysColumHeader[1]}} </mat-header-cell>
-                    <mat-cell *matCellDef="let element" class="timetable-status-cell" [ngClass]="getStatusClass(element.d1.status)" (click)="quadrantClicked(element.d1)"> {{element.d1.status}} {{element.d1.quadrant}}</mat-cell>
+                    <mat-cell *matCellDef="let element" class="timetable-status-cell" [ngClass]="getStatusClass(element.d1.status)" (click)="quadrantClicked(element.d1)"></mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="d2" [sticky]="true">
                     <mat-header-cell *matHeaderCellDef> {{daysColumHeader[2]}} </mat-header-cell>
-                    <mat-cell *matCellDef="let element" class="timetable-status-cell" [ngClass]="getStatusClass(element.d2.status)" (click)="quadrantClicked(element.d2)"> {{element.d2.status}} {{element.d2.quadrant}}</mat-cell>
+                    <mat-cell *matCellDef="let element" class="timetable-status-cell" [ngClass]="getStatusClass(element.d2.status)" (click)="quadrantClicked(element.d2)"></mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="d3" [sticky]="true">
                     <mat-header-cell *matHeaderCellDef> {{daysColumHeader[3]}} </mat-header-cell>
-                    <mat-cell *matCellDef="let element" class="timetable-status-cell" [ngClass]="getStatusClass(element.d3.status)" (click)="quadrantClicked(element.d3)"> {{element.d3.status}} {{element.d3.quadrant}}</mat-cell>
+                    <mat-cell *matCellDef="let element" class="timetable-status-cell" [ngClass]="getStatusClass(element.d3.status)" (click)="quadrantClicked(element.d3)"></mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="d4" [sticky]="true">
                     <mat-header-cell *matHeaderCellDef> {{daysColumHeader[4]}} </mat-header-cell>
-                    <mat-cell *matCellDef="let element" class="timetable-status-cell" [ngClass]="getStatusClass(element.d4.status)" (click)="quadrantClicked(element.d4)"> {{element.d4.status}} {{element.d4.quadrant}}</mat-cell>
+                    <mat-cell *matCellDef="let element" class="timetable-status-cell" [ngClass]="getStatusClass(element.d4.status)" (click)="quadrantClicked(element.d4)"></mat-cell>
                 </ng-container>
     
                 <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
