--- a/src/frontend/src/app/components/training/training-detail/training-detail.component.scss
+++ b/src/frontend/src/app/components/training/training-detail/training-detail.component.scss
@@ -30,7 +30,6 @@
     min-height: 70%;
     border-radius: 15px;
     border: 1px solid;
-    border-color: green;
     padding: 40px;
     display: flex;
     flex-direction: column;
@@ -84,6 +83,12 @@
     align-items: center;
 }
 
+.card-status-data-scheduled{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .ds-button-primary{
     width: 10vw;
     margin-top: 20px;
@@ -104,4 +109,8 @@
 
 .log-container-text{
     white-space: pre-wrap;
+}
+
+.cancel-button{
+    width: 250px !important;
 }
