--- a/src/frontend/src/app/components/training/training-new/training-new.component.scss
+++ b/src/frontend/src/app/components/training/training-new/training-new.component.scss
@@ -45,9 +45,6 @@
     width: 90% !important;
 }
 
-::ng-deep .mat-form-field {
-    color: green;
-}
 
 .timetable-container{
     height: 400px;
@@ -158,4 +155,24 @@ tr.mat-footer-row{
 .worker-content-prop-name{
     margin-right: 10px;
     font-weight: bold;
+}
+
+::ng-deep .mat-focused .mat-form-field-label {
+    /*change color of label*/
+    color: $color-foreground !important;
+}
+
+::ng-deep .mat-form-field-label {
+    /*change color of label*/
+    color: $color-foreground !important;
+}
+
+::ng-deep.mat-form-field-underline {
+    /*change color of underline*/
+    background-color: $color-foreground!important;
+} 
+
+::ng-deep.mat-form-field-ripple {
+    /*change color of underline when focused*/
+    background-color: $color-foreground !important;;
 }
