--- a/src/frontend/src/app/components/training/training-detail/training-detail.component.scss
+++ b/src/frontend/src/app/components/training/training-detail/training-detail.component.scss
@@ -97,8 +97,8 @@
 .log-container{
     margin-top: 80px;
     //flex: 1;
-    height: 40vh;
-    max-height: 40vh;
+    height: 36vh;
+    max-height: 36vh;
     width: 100%;
     background-color: #222;
     padding: 10px;
@@ -114,3 +114,11 @@
 .cancel-button{
     width: 250px !important;
 }
+
+.tensorboard-button{
+    margin: 10px;
+    padding: 0px 10px;
+    background-color: #fc6d26; 
+    color: white;
+}
+
