Default images instructions updated

--- a/src/frontend/src/app/components/default-images/pytorch/pytorch.component.html
+++ b/src/frontend/src/app/components/default-images/pytorch/pytorch.component.html
@@ -31,7 +31,7 @@
                     <pre><code class="code-block" [highlight]="codeStep3_1" [languages]="['docker']"></code></pre>
                     <h4>If you have pip requirements create a requirements.txt file, copy it into the container and run pip install:</h4>
                     <pre><code class="code-block" [highlight]="codeStep3_2" [languages]="['docker']"></code></pre>
-                    <h4>Finally modify the entrypoint.sh script including the main script execution (include cuda parameter)</h4>
+                    <h4>Finally include an entrypoint with the main script execution (include cuda parameter)</h4>
                     <pre><code class="code-block" [highlight]="codeStep3_3" [languages]="['docker']"></code></pre>
                 </div>
             </mat-tab>
